tests/compile_fail/from_str/rename_multiple.rs
use derive_more::FromStr;

#[derive(FromStr)]
enum E {
    #[from_str(rename = "a")]
    #[from_str(rename = "b")]
    A,
}

fn main() {}
