tests/compile_fail/from_str/rename_multiple.stderr
error: multiple `#[from_str(rename="...")]` attributes aren't allowed
 --> tests/compile_fail/from_str/rename_multiple.rs:6:5
  |
6 |     #[from_str(rename = "b")]
  |     ^
